# RustOpenAi

./: Cargo.toml  README.md
src/: client.rs  lib.rs  macros.rs  networking.rs
src/networking/: assistant.rs  chat.rs  core.rs  file.rs  message.rs  mod.rs  model.rs  run.rs  thread.rs
src/types/: assistant.rs  chat.rs  common.rs  error.rs  file.rs  fine_tuning.rs  message.rs  mod.rs  model.rs  moderation.rs  run.rs  thread.rs
