[package]
name = "RustOpenAi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json", "blocking", "multipart"]}
url = {version= "2.5.0"}

serde = {version = "1.0.196", features = ["derive"]}
serde_json = {version = "1.0.80"}
serde_urlencoded = {version = "0.7.0"}
